# pt-dictionary-extractor

./: Cargo.toml  README.md  dictionary.txt
src/: main.rs
