[package]
name = "all_words"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"
reqwest = "0.11.20"
scraper = "0.17.1"
tokio = { version = "1.32.0", features = ["full"] }
lexical-sort = "0.3.1"
loading = "*"
